refactor(wallet): define storage interface (#1995)
